# dist/swagger.json
@@ -149,7 +149,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Partial_lt_AnimationBaseDto_gt_"
+                "$ref": "#/components/schemas/AnimationReqDto"
               }
             }
           },
@@ -1937,193 +1937,6 @@
           "name",
           "createdAt"
         ],
-        "x-typia-jsDocTags": []
-      },
-      "Partial_lt_AnimationBaseDto_gt_": {
-        "type": "object",
-        "properties": {
-          "name": {
-            "description": "@default 바키",
-            "x-typia-jsDocTags": [
-              {
-                "name": "default",
-                "text": [
-                  {
-                    "text": "바키",
-                    "kind": "text"
-                  }
-                ]
-              }
-            ],
-            "x-typia-required": false,
-            "x-typia-optional": false,
-            "type": "string",
-            "default": "바키"
-          },
-          "plot": {
-            "description": "@default 아부지 싸움 잘하시네요?",
-            "x-typia-jsDocTags": [
-              {
-                "name": "default",
-                "text": [
-                  {
-                    "text": "아부지 싸움 잘하시네요?",
-                    "kind": "text"
-                  }
-                ]
-              }
-            ],
-            "x-typia-required": false,
-            "x-typia-optional": false,
-            "type": "string",
-            "default": "아부지 싸움 잘하시네요?"
-          },
-          "broadcastType": {
-            "description": "@default OVA",
-            "x-typia-jsDocTags": [
-              {
-                "name": "default",
-                "text": [
-                  {
-                    "text": "OVA",
-                    "kind": "text"
-                  }
-                ]
-              }
-            ],
-            "x-typia-required": false,
-            "x-typia-optional": false,
-            "type": "string",
-            "enum": [
-              "TVA",
-              "OVA",
-              "ONA",
-              "MOV"
-            ],
-            "default": "OVA"
-          },
-          "episodeNumber": {
-            "description": "@default 1",
-            "x-typia-jsDocTags": [
-              {
-                "name": "default",
-                "text": [
-                  {
-                    "text": "1",
-                    "kind": "text"
-                  }
-                ]
-              }
-            ],
-            "x-typia-required": false,
-            "x-typia-optional": false,
-            "type": "number",
-            "default": 1
-          },
-          "rating": {
-            "description": "@default ADULT",
-            "x-typia-jsDocTags": [
-              {
-                "name": "default",
-                "text": [
-                  {
-                    "text": "ADULT",
-                    "kind": "text"
-                  }
-                ]
-              }
-            ],
-            "x-typia-required": false,
-            "x-typia-optional": false,
-            "type": "string",
-            "enum": [
-              "ADULT",
-              "FIFTEEN",
-              "TWELVE",
-              "ALL"
-            ],
-            "default": "ADULT"
-          },
-          "primaryKeyword": {
-            "description": "@default 싸움",
-            "x-typia-jsDocTags": [
-              {
-                "name": "default",
-                "text": [
-                  {
-                    "text": "싸움",
-                    "kind": "text"
-                  }
-                ]
-              }
-            ],
-            "x-typia-required": false,
-            "x-typia-optional": false,
-            "type": "string",
-            "default": "싸움"
-          },
-          "status": {
-            "description": "@default ONGOING",
-            "x-typia-jsDocTags": [
-              {
-                "name": "default",
-                "text": [
-                  {
-                    "text": "ONGOING",
-                    "kind": "text"
-                  }
-                ]
-              }
-            ],
-            "x-typia-required": false,
-            "x-typia-optional": false,
-            "type": "string",
-            "enum": [
-              "FINISHED",
-              "ONGOING",
-              "UPCOMING",
-              "UNKNOWN"
-            ],
-            "default": "ONGOING"
-          },
-          "isReleased": {
-            "description": "@default true",
-            "x-typia-jsDocTags": [
-              {
-                "name": "default",
-                "text": [
-                  {
-                    "text": "true",
-                    "kind": "text"
-                  }
-                ]
-              }
-            ],
-            "x-typia-required": false,
-            "x-typia-optional": false,
-            "default": true,
-            "type": "boolean"
-          },
-          "imageUrl": {
-            "description": "@default https://placehold.co/600x400",
-            "x-typia-jsDocTags": [
-              {
-                "name": "default",
-                "text": [
-                  {
-                    "text": "https://placehold.co/600x400",
-                    "kind": "text"
-                  }
-                ]
-              }
-            ],
-            "x-typia-required": false,
-            "x-typia-optional": false,
-            "type": "string",
-            "default": "https://placehold.co/600x400"
-          }
-        },
-        "nullable": false,
         "x-typia-jsDocTags": []
       },
       "GetResult_lt__blt__space_id:_space_number;_space_name:_space_string;_space_plot:_space_string;_space_broadcastType:_space_BroadcastType;_space_episodeNumber:_space_number;_space_imageUrl:_space_string;_space_rating:_space_Rating;_space_primaryKeyword:_space_string;_space_status:_space_Status;_space_..._space_5_space_more_space_...;_space_deletedAt:_space_Date_space__or__space_null;_space__bgt__comma__space_unknown_gt__space__and__space__blt__bgt_": {
